--- a/src/Principal.form
+++ b/src/Principal.form
@@ -397,7 +397,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="d3" green="7e" red="2a" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Listado de Asistencia de la Asignatura (por per&#xed;odo)"/>
+                <Property name="text" type="java.lang.String" value="Listado de Asistencia de la Asignatura (por semana)"/>
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel13MouseClicked"/>
