--- a/src/EstuFaltas.form
+++ b/src/EstuFaltas.form
@@ -65,6 +65,7 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
@@ -72,7 +73,7 @@
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                                   <Component id="jComboBox1" max="32767" attributes="0"/>
                               </Group>
                           </Group>
@@ -101,6 +102,8 @@
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -162,12 +165,12 @@
                       <Data value="Santiago"/>
                       <Data value="Selvin"/>
                     </Column>
-                    <Column editable="false" title="Cuenta" type="java.lang.String">
+                    <Column editable="false" title="No. Cuenta" type="java.lang.String">
                       <Data value="45897212"/>
                       <Data value="20172016"/>
                       <Data value="56457620"/>
                     </Column>
-                    <Column editable="false" title="Faltas" type="java.lang.String">
+                    <Column editable="false" title="No. Faltas" type="java.lang.String">
                       <Data value="15"/>
                       <Data value="20"/>
                       <Data value="17"/>
@@ -249,6 +252,17 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/imagen/icons8-macos-close-32.png"/>
             </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel4">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="14" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="e0" green="98" red="51" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="1 PAC"/>
           </Properties>
         </Component>
       </SubComponents>
